ajust: Update use case, create multiple makes and modes, verify makes and models
