# src/Data/Make/UpdateMakeDto.ts
@@ -1,13 +1,17 @@
-export interface IUpdateMake {
-    make_name?: string;
-    origin?: string;
-    make_logo?: string;
-    active?: boolean;
+export interface UpdateMakeDbDto {
+  make_name?: string;
+  origin?: string;
+  make_logo?: string;
+  active?: boolean;
+  company: string;
+  year_founded?: number;
 }
 
 export interface UpdateMakeDto {
-    makeName?: string;
-    origin?: string;
-    makeLogo?: string;
-    active?: boolean;
+  makeName?: string;
+  origin?: string;
+  makeLogo?: string;
+  active?: boolean;
+  company?: string;
+  yearFounded?: number;
 }
