# src/Data/Model/GetModelDtos.ts
@@ -6,6 +6,8 @@ export interface GetModelDto {
   makeId: string;
   active: boolean;
   createdAt: string | Date;
+  updatedAt: string | Date;
+  yearFounded: number;
   make: { makeName: string };
 }
 
@@ -15,5 +17,7 @@ export interface IGetModel {
     make_id: string;
     active: boolean;
     created_at?: string | Date;
+    updated_at?: string | Date;
+    year_founded: number;
     makes?: { make_name: string };
 }
